add backtest equity point history